<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.sxj</groupId>
	<artifactId>file-parent</artifactId>
	<version>1.0</version>
	<packaging>pom</packaging>
	<modules>
		<module>file-web</module>
		<module>file-common</module>
	</modules>
	<name>file-parent</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<com.sxj.spring>4.2.3</com.sxj.spring>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.7</java.version>
		<com.sxj.version>1.0</com.sxj.version>
		<com.sxj.spring>4.2.3</com.sxj.spring>
		<mybatis.version>3.2.7</mybatis.version>
		<mybatis.orm.version>3.2.2</mybatis.orm.version>
		<spring.mybatis.version>1.2.2</spring.mybatis.version>
		<com.alibaba.druid.version>1.0.7</com.alibaba.druid.version>
		<mysql.version>5.1.31</mysql.version>
		<junit>4.11</junit>
		<spring.version>4.0.6.RELEASE</spring.version>
		<spring.webflow.version>2.4.0.RELEASE</spring.webflow.version>
		<servlet.version>3.0.1</servlet.version>
		<jstl.version>1.2</jstl.version>
		<jsp.version>2.0</jsp.version>
		<commons-lang3.version>3.3.2</commons-lang3.version>
		<commons-io.version>2.4</commons-io.version>
		<commons-codec.version>1.9</commons-codec.version>
		<commons-beanutils.version>1.9.2</commons-beanutils.version>
		<commons-fileupload.version>1.3.1</commons-fileupload.version>
		<commons-net.version>3.3</commons-net.version>
		<slf4j.version>1.7.7</slf4j.version>
		<logback.version>1.1.2</logback.version>
	</properties>

	<distributionManagement>
		<repository>
			<id>release</id>
			<name>Local Nexus Repository</name>
			<url>http://192.168.1.11:8080/nexus/content/repositories/releases</url>
		</repository>
		<snapshotRepository>
			<id>nexus-snapshots</id>
			<name>Local Nexus Repository</name>
			<url>http://192.168.1.11:8080/nexus/content/groups/public</url>
		</snapshotRepository>
	</distributionManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<downloadSources>true</downloadSources>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>UTF-8</encoding>
					 <compilerArguments>
                        <verbose />
                        <bootclasspath>${java.home}\lib\rt.jar;${java.home}\lib\jce.jar</bootclasspath>
                    </compilerArguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.7.1</version>
				<configuration>
					<!-- <redirectTestOutputToFile>true</redirectTestOutputToFile> -->
					<argLine>-XX:MaxPermSize=128m -Xmx256m</argLine>
					<!-- Force alphabetical order to have a reproducible build -->
					<runOrder>alphabetical</runOrder>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.4.2</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-provider-gitexe</artifactId>
						<version>1.9</version>
					</dependency>
				</dependencies>
				<configuration>
					<arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
